--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,12 @@ repositories {
 
 dependencies {
 	//spring boot
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 	// QueryDSL
 	implementation 'com.querydsl:querydsl-jpa'
@@ -34,6 +37,11 @@ dependencies {
 	// datasource
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'mysql:mysql-connector-java'
+
+	// map struct
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
 	// docs
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
