--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,2 +1,33 @@
 server:
   port: 8080
+
+logging:
+  file:
+    path: logs
+
+spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
+  output:
+    ansi:
+      enabled: always
+
+  jackson:
+    default-property-inclusion: non_null
+
+  jpa:
+    show-sql: true
+    database: mysql
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        format_sql: true
+
+  datasource:
+    url: jdbc:mysql://13.209.123.247:3306/soosoodb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull&allowPublicKeyRetrieval=true
+    username: soosoo
+    password: soosoo7942!
+    driver-class-name: com.mysql.cj.jdbc.Driver
