--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	// docs
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
+	// kafka
+	implementation 'org.apache.kafka:kafka-clients:2.8.0'
+
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
