--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	// kafka
-	implementation 'org.apache.kafka:kafka-clients:2.8.0'
+//	implementation 'org.apache.kafka:kafka-clients:2.8.0'
 
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
